# chip8

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
lib/: CMakeLists.txt
src/: CMakeLists.txt  chip.cpp  chip.h  main.cpp  util.h  video.cpp  video.h
